--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <div class="box maindiv">
-        <h1>My Hobbbies</h1>
+        <h1>My Hobbies</h1>
     </div>
     <div class="box secdiv">
         <p id="text">These are some of my hobbies</p>
         <ul>
-            <li>Cricket</li>
+            <li out-game="outdoor">Cricket</li>
             <li>Football</li>
-            <li>Coding</li>
+            <li class="coding">Coding</li>
             <li>Skating</li>
         </ul>
     </div>
